@startuml
class TransferClientReceiver

class TransferClientSender

class Client

class UserInput

class ServerInput

class AllConsumers

class MessageHandler

class AllMessages

class FileTransferTimer

Client --> UserInput : has
Client --> ServerInput : has

UserInput --> AllMessages : uses

ServerInput --> MessageHandler : creates

Server "1" --> "*" ClientInstance : manages

Server --> FileTransferSv : handles file transfer
Server --> RPSHandler : manages game logic
Server --> ClientLogger : logs client activity

RPSHandler --> ClientInstance : contains
RPSHandler --> ServerLogger : uses
RPSHandler --> AllMessages : uses

HeartbeatHandler --> ClientLogger : uses
HeartbeatHandler --> AllMessages : uses

FileTransferHandler --> ClientInstance : uses
FileTransferHandler --> FileTransferRegistry : uses

FileTransferTimer --> ClientInstance : contains
FileTransferTimer <-- FileTransferRegistry : contains

FileTransferSv --> FileTransferHandler : uses

FileTransferRegistry --> FileTransferHandler : creates

ClientInstance --> Server : uses
ClientInstance --> HeartbeatHandler : uses
ClientInstance <-- ClientLogger : uses
ClientInstance --> ServerLogger : uses
ClientInstance --> AllMessages: uses
ClientInstance --> MessageHandler : creates
ClientInstance --> AllMessages : uses

MessageHandler <-- AllConsumers

@enduml